# lm-chat

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: .env  Cargo.toml  cache.db  tauri.conf.json
src-tauri/chat-core/: Cargo.toml
src-tauri/chat-core/src/: builder.rs  lib.rs  transport.rs
src-tauri/chat-core/src/data/: history.rs  message.rs  mod.rs  object.rs  pam.rs  presence.rs  pubsub.rs  request.rs  response.rs  target.rs  timetoken.rs  uuid.rs
src-tauri/chat-core/src/pubnub/: mod.rs
src-tauri/chat-core/src/subscription/: message_destination.rs  mod.rs  mvec.rs  registry.rs  subscribe_loop.rs  subscribe_loop_supervisor.rs  subscription.rs
src-tauri/chat-hyper/: Cargo.toml
src-tauri/chat-hyper/src/: lib.rs  macros.rs
src-tauri/chat-hyper/src/runtime/: mod.rs  tokio.rs
src-tauri/chat-util/: Cargo.toml
src-tauri/chat-util/src/: lib.rs  pam_signature.rs  uritemplate.rs  url_encoded_list.rs
src-tauri/migrations/2022-07-20-093555_create_users/: down.sql  up.sql
src-tauri/src/: api.rs  entity.rs  lib.rs  main.rs  models.rs  orm.rs  schema.rs
src-tauri/src/protocol/: codec.rs  payload.rs
src-tauri/tests/: test_serde.rs
src/components/: CompLogin.vue  CompMain.vue  UserLogin.vue
src/css/: friendlist.css  friendlist.scss  homepage.css  style.css
src/views/: ChatRecords.vue  FriendCircle.vue  FriendDetail.vue  FriendList.vue  HistoryFiles.vue  HomePage.vue  MyFavorites.vue
src/views/contacts/: FriendDetail.vue  NewFriendDetail.vue  OfficialAccountsDetail.vue  SavedGroupDetail.vue
(+3 files in other folders)
